:wrench: Fix layout problem on mobile devices

--- a/content/registrasi/pendaftaran-jemaat.html
+++ b/content/registrasi/pendaftaran-jemaat.html
@@ -80,7 +80,7 @@ draft = false
                 <input type="text" class="form-control" name="no-ktp" placeholder="no-ktp" required />
                 <label for="no-ktp" class="form-label">No KTP</label>
             </div>
-            <div class="form-floating col-8 mb-3">
+            <div class="form-floating col-md-8 col-sm-12 mb-3">
                 <input type="text" class="form-control" name="alamat" placeholder="alamat" required />
                 <label for="alamat" class="form-label">Alamat</label>
             </div>
@@ -100,11 +100,11 @@ draft = false
                 <input type="text" class="form-control" name="kecamatan" placeholder="kecamatan" required />    
                 <label for="kecamatan" class="form-label">Kecamatan</label>
             </div>
-            <div class="form-floating col-10 mb-3">
+            <div class="form-floating col-md-10 col-sm-12 mb-3">
                 <input type="text" class="form-control" name="kota-kabupaten" placeholder="kota-kabupaten" required />
                 <label for="kota-kabupaten" class="form-label">Kota/Kabupaten</label>
             </div>            
-            <div class="form-floating col-2 mb-3">
+            <div class="form-floating col-md-2 col-sm-12 mb-3">
                 <input type="number" class="form-control" name="kode-pos" placeholder="kode-pos" />
                 <label for="kode-pos" class="form-label">Kode Pos</label>
             </div>            
@@ -156,7 +156,10 @@ draft = false
                 <select class="form-select" name="som-kom[]" aria-label="Pilih status">
                     <option selected>Pilih salah satu</option>
                     <option value="Belum">Belum</option>
-                    <option value="Sudah">Sudah</option>
+                    <option value="SOM 1/KOM 100">SOM 1/KOM 100</option>
+                    <option value="SOM 2/KOM 200">SOM 2/KOM 200</option>
+                    <option value="SOM 3/KOM 300">SOM 3/KOM 300</option>
+                    <option value="SOM 4/KOM 400">SOM 4/KOM 400</option>
                 </select>
                 <label for="som-kom" class="form-label">SOM/KOM</label>
             </div>
