--- a/content/permohonan/cetak-kkj.html
+++ b/content/permohonan/cetak-kkj.html
@@ -41,6 +41,6 @@ draft = false
     </fieldset>
     <hr />
     <div class="col-12">
-        <button class="btn btn-primary btn-lg" type="submit">Kirim</button>
+        <button class="btn btn-primary btn-lg" type="submit">Kirim Permohonan</button>
     </div>
 </form>
