:wrench: Stylish update again

--- a/content/permohonan/cetak-kkj.html
+++ b/content/permohonan/cetak-kkj.html
@@ -19,8 +19,8 @@ draft = false
     <div class="hidden col-12">
         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </div>
-    <div class="alert alert-info" role="alert">
-        <strong>NAJ</strong> atau <strong>Nomor Anggota Jemaat</strong> bisa diperoleh dari Sekretariat Jemaat.
+    <div class="alert alert-warning" role="alert">
+        Pastikan sebelumnya sudah pernah mengisi <a href="/permohonan/cetak-kkj" class="alert-link">Formulir Pendaftaran Jemaat</a>. <strong>NAJ</strong> atau <strong>Nomor Anggota Jemaat</strong> bisa diperoleh dari Sekretariat Jemaat.
     </div>
     <fieldset>
         <legend>Data Isian</legend>
@@ -40,7 +40,7 @@ draft = false
         </div>
     </fieldset>
     <hr />
-    <div class="col-12">
+    <div class="col-12 d-flex justify-content-center">
         <button class="btn btn-primary btn-lg" type="submit">Kirim Permohonan</button>
     </div>
 </form>
