--- a/content/registrasi/pendaftaran-jemaat.html
+++ b/content/registrasi/pendaftaran-jemaat.html
@@ -174,7 +174,7 @@ draft = false
         </div>
     </fieldset>
     <hr />
-    <div class="col-12">
+    <div class="col-12 d-flex justify-content-center">
         <button class="btn btn-primary btn-lg" type="submit">Kirim</button>
     </div>
 </form>
