--- a/content/registrasi/pendaftaran-jemaat.html
+++ b/content/registrasi/pendaftaran-jemaat.html
@@ -174,6 +174,41 @@ draft = false
         </div>
     </fieldset>
     <hr />
+    <fieldset>
+        <legend>Emergency Contact</legend>
+        <div class="row">
+            <p class="col-12">
+                Kontak yang akan dihubungi saat keadaan darurat.
+            </p>
+            <div class="form-floating col-12 mb-3">
+                <input type="text" class="form-control" name="emergency-kontak" placeholder="emergency-kontak" />    
+                <label for="emergency-kontak" class="form-label">Nama</label>
+            </div>
+            <div class="form-floating col-12 mb-3">
+                <input type="text" class="form-control" name="emergency-alamat" placeholder="emergency-alamat" />    
+                <label for="emergency-alamat" class="form-label">Alamat</label>
+            </div>
+            <div class="form-floating col-md-6 col-sm-12 mb-3">
+                <input type="text" class="form-control" name="emergency-hp" placeholder="emergency-hp" />    
+                <label for="emergency-hp" class="form-label">No Telp/HP</label>
+            </div>
+            <div class="form-floating col-md-6 col-sm-12 mb-3">
+                <input type="text" class="form-control" name="emergency-hp-alternatif" placeholder="emergency-hp-alternatif" />    
+                <label for="emergency-hp-alternatif" class="form-label">No Telp/HP Alternatif</label>
+            </div>
+            <div class="form-floating col-12 mb-3">
+                <select class="form-select" name="emergency-hubungan[]" aria-label="Pilih hubungan" required>
+                    <option selected>Pilih salah satu</option>
+                    <option value="Orang Tua">Orang Tua</option>
+                    <option value="Anak">Anak</option>
+                    <option value="Saudara">Saudara</option>
+                    <option value="Kerabat">Kerabat</option>
+                    <option value="Tetangga">Tetangga</option>
+                </select>
+                <label for="emergency-hubungan" class="form-label">Hubungan</label>
+            </div>
+        </div>
+    </fieldset>
     <div class="col-12 d-flex justify-content-center">
         <button class="btn btn-primary btn-lg" type="submit">Kirim</button>
     </div>
