:wind: New cetak form

--- a/content/permohonan/cetak-kkj.html
+++ b/content/permohonan/cetak-kkj.html
@@ -9,7 +9,7 @@ draft = false
 <form 
     class="row g-3" 
     action="/sukses" 
-    name="penyerahan-anak" 
+    name="cetak-kkj" 
     method="POST" 
     data-netlify="true" 
     netlify-honeypot="bot-field" 
@@ -20,7 +20,8 @@ draft = false
         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </div>
     <div class="alert alert-warning" role="alert">
-        Pastikan sebelumnya sudah pernah mengisi <a href="/permohonan/cetak-kkj" class="alert-link">Formulir Pendaftaran Jemaat</a>. <strong>NAJ</strong> atau <strong>Nomor Anggota Jemaat</strong> bisa diperoleh dari Sekretariat Jemaat.
+        Pastikan sebelumnya sudah pernah mengisi <a href="/registrasi/pendaftaran-jemaat" class="alert-link">Formulir Pendaftaran Jemaat</a>.<br />
+        <strong>NAJ</strong> atau <strong>Nomor Anggota Jemaat</strong> bisa diperoleh dari Sekretariat Jemaat.
     </div>
     <fieldset>
         <legend>Data Isian</legend>
